--- a/src/pages/play/play.scss
+++ b/src/pages/play/play.scss
@@ -118,4 +118,14 @@ page-play {
     .content1 ion-label.label.label-md {
         color: white;
     }
+    .start{
+        padding:1em;
+        font-size: 1.3em;
+    }
+    .startBtn{
+        height: 3em;
+        border-radius: 15px;
+        margin-bottom: 1em;
+        font-size: 1.3em;
+    }
 }
