--- a/src/pages/speed-test/speed-test.scss
+++ b/src/pages/speed-test/speed-test.scss
@@ -1,3 +1,130 @@
 page-speed-test {
+    ion-content {
+        background-size: cover;
+        background-repeat: no-repeat;
+        border-color: transparent;
+    }
 
+    ion-item.type{
+        border: 1px solid gray;
+        border-radius: 20px;
+        margin-bottom: 2em;
+    }
+
+    .typeBtn{
+    margin-top: 3em;
+}
+
+    .transparentItem{
+        color: white !important;
+        background-color: transparent !important;
+        font-size: 0.8em;
+    }
+
+    .questionBar ion-label.label.label-md {
+        margin: 0;
+    }
+
+    .item-md {
+        padding-left: 5px;
+    }
+    .list-md .item-block .item-inner {
+        border-bottom: 0px solid #dedede;
+    }
+    ion-card.card.card-md {
+        box-shadow: none;
+    }
+    
+    .btn {
+        position: absolute;
+        bottom: 10px;
+        left: 3%;
+        right: 3%;
+        width: 94%;
+    } 
+
+    ion-card.card.card-md {
+        margin: 0;
+        width: 100%;
+    }
+    .card-content-md{
+        background: #D01E29;
+    }
+    .card-content-md p{
+        color: white;
+    }
+    .imgContainer{
+        max-height: 15em !important;
+        display: block;
+        background-color: transparent !important;
+        border-top: 1px solid gray;
+        border-left: 1px solid gray;
+        border-right: 1px solid gray;
+        padding:0.5em;
+    }
+    img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        max-height: 14em;
+        min-width: 75%;
+        max-width: 80%;
+        width: auto;
+        padding: 0.5em auto;
+        border: 1px solid white;
+    }
+    ion-card.content1.card.card-md.card-md-primary {
+        font-size: 1.2em;
+    }
+
+    .button-md {
+        font-size: 1.6rem;
+    }
+
+    .card-content-md {
+        padding: 0px;
+        margin: 0;
+    }
+
+    .card-content-md.progress-outer {
+        margin: 0;
+    }
+    
+    ion-label, .item-radio-checked.item-md ion-label{
+        color: black;
+    }
+
+    .loadingBar.progress-bar .loadingBar.progress-inner{
+        height: 3em;
+        background-color: #FCC65D;
+    }
+
+    ion-col.col {
+        color: white;
+    }
+    .col{
+        padding:1px;
+    }
+
+    .choice{    
+        // color: black;
+        height: 3em;
+    }
+    ion-card.content1{
+        padding: 1em;
+        font-size: 1.4em;
+    }
+    .content1 ion-label.label.label-md {
+        color: white;
+    }
+    .start{
+        padding:1em;
+        font-size: 1.3em;
+    }
+    .startBtn{
+        height: 3em;
+        border-radius: 15px;
+        margin-bottom: 1em;
+        font-size: 1.3em;
+    }
 }
